<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="https://maven.apache.org/POM/4.0.0
                             https://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>4.1.0</version>
		<relativePath/>
	</parent>

	<groupId>com.Orka</groupId>
	<artifactId>Main</artifactId>
	<version>0.0.1-SNAPSHOT</version>

	<packaging>pom</packaging>

	<modules>
		<module>common-grammar</module>
		<module>DefinitionManager</module>
		<module>RunManager</module>
		<module>RestService</module>
		<module>Automata</module>
	</modules>

	<properties>

		<java.version>24</java.version>

		<protobuf.version>4.33.4</protobuf.version>

		<protobuf.maven.plugin.version>0.6.1</protobuf.maven.plugin.version>

		<os.maven.plugin.version>1.7.1</os.maven.plugin.version>

		<spring.grpc.version>1.0.3</spring.grpc.version>

		<lombok.version>1.18.42</lombok.version>

		<grpc.version>1.77.1</grpc.version>

	</properties>

	<dependencyManagement>

		<dependencies>

			<dependency>
				<groupId>org.springframework.grpc</groupId>
				<artifactId>spring-grpc-dependencies</artifactId>
				<version>${spring.grpc.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

		</dependencies>

	</dependencyManagement>

	<build>

		<pluginManagement>

			<plugins>

				<plugin>

					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-maven-plugin</artifactId>

				</plugin>

				<plugin>

					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>

					<configuration>

						<release>${java.version}</release>

						<annotationProcessorPaths>

							<path>

								<groupId>org.projectlombok</groupId>
								<artifactId>lombok</artifactId>
								<version>${lombok.version}</version>

							</path>

						</annotationProcessorPaths>

					</configuration>

				</plugin>

				<plugin>

					<groupId>kr.motd.maven</groupId>
					<artifactId>os-maven-plugin</artifactId>
					<version>${os.maven.plugin.version}</version>

				</plugin>

				<plugin>

					<groupId>org.xolstice.maven.plugins</groupId>
					<artifactId>protobuf-maven-plugin</artifactId>
					<version>${protobuf.maven.plugin.version}</version>

					<configuration>

						<protocArtifact>
							com.google.protobuf:protoc:${protobuf.version}:exe:${os.detected.classifier}
						</protocArtifact>

						<pluginId>grpc-java</pluginId>

						<pluginArtifact>
							io.grpc:protoc-gen-grpc-java:1.77.1:exe:${os.detected.classifier}
						</pluginArtifact>

					</configuration>

				</plugin>

			</plugins>

		</pluginManagement>

	</build>

</project>